style.css
* {
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
}

html {
    direction: rtl;
}

header {
    height: 105px;
    width: 100;
    position: relative;
    background-color: rgb(144, 144, 144);
    background: linear-gradient(180deg, rgba(144, 144, 144, 1) 82%, rgba(170, 170, 170, 1) 93%);
}

.header_container {
    display: flex;
    flex-direction: column;
    margin: auto;
    width: 900px;
    height: 105px;
    justify-content: flex-end;
    align-items: flex-end;
    position: relative;
}

li.sep {
    width: 4px;
    height: 21px;
    background: url(images/menu_sep.png) no-repeat 0 0px;
    margin: 0 16px;
}

.search-container {
    display: inline-block;
}

.search-container input {
    border: none;
    border-top-right-radius: 7px;
    width: 132px;
    height: 19px;
    display: inline-block;
}

.search-container button {
    background: url(images/search_button.png)no-repeat 0 0px;
    border: none;
    width: 19px;
    height: 19px;
    display: inline-block;
}

.search-form {
    display: flex;
    justify-content: flex-end;
}

.top-bar>ul {
    width: 757px;
    height: 33px;
    display: flex;
    list-style: none;
    padding: 0;
}

.header-bottom {
    display: flex;
    justify-content: flex-end;
    margin-right: 30px;
}

.logo {
    position: absolute;
    left: 765px;
    top: 35px;
}

.top-bar>ul>li>a {
    text-decoration: none;
    color: #fff;
    font-size: 15px;
    height: 33px;
    font-weight: bold;
    display: inline-block;
}

.sep-2 {
    width: 100%;
    zoom: 1;
    padding: 0;
    margin: 0;
    height: 1px;
    background: url(images/menu_dropdown_sep.png) repeat-x 0 0;
}

.dropdown-content a {
    display: block;
}

.dropdown-content a:not(.sep-2) {
    font-size: 15px;
    font-weight: bold;
    text-decoration: none;
    color: #fff;
    padding: 4px;
    white-space: nowrap;
}

.dropdown {
    position: relative;
    display: inline;
    z-index: 1;
}

.dropdown-content {
    background: rgb(144, 144, 144);
    background: linear-gradient(0deg, rgba(144, 144, 144, 1) 88%, rgba(171, 171, 171, 1) 95%);
    display: flex;
    position: absolute;
    flex-direction: column;
    list-style: none;
    padding: 0;
    top: 33px;
    display: none;
}

.dropdown-content a:hover {
    background-color: rgb(188, 188, 188);
}

.dropdown a:hover {
    color: rgb(0, 96, 155);
    text-decoration: underline;
}

.dropdown:hover>.dropdown-content {
    display: block;
}

.header-top {
    margin-bottom: 30px;
}

.header-top a {
    text-decoration: none;
    color: #fff;
    font-size: 12px;
    font-weight: bold;
    display: inline-block;
    margin-left: 12px;
}



.row-content-1 {
    position: relative;
    width: 293px;
    height: 355px;
    margin-left: 5px;
    margin-right: 5px;
    margin-top: 30px;
    border-bottom-right-radius: 20px;
}

.row-content-1>div {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    position: absolute;
    color: #fff;
    font-size: 13px;
    width: 248px;
    height: 97px;
    bottom: 0;
    margin: 8px;
    border-bottom-right-radius: 20px;
    background-color: rgb(125, 125, 125, 0.9);
}

.row-content-1>div p {
    width: 228px;
    height: 52px;
    padding-right: 10px;
    margin-top: 4px;
}

.row-content-1>div h3 {
    padding-right: 10px;
    width: 228px;
    height: 14px;
    margin-top: 5px;
}

.read-more {
    width: 54px;
    height: 15px;
    background: url(images/read_more_white.png) no-repeat left center;
    align-self: flex-end;
    margin-left: 10px;
    margin-top: 5px;
}

.row-content-1>div a {
    color: #fff;
    width: 54px;
    display: inline-block;
}

.read-more>a:hover {
    color: rgb(0, 96, 155);
}

.read-more:hover {
    background: url(images/read_more_blue.png) no-repeat left center;
}

.row-content-1:nth-child(1) {
    background: url(images/1908364606615453350.JPG);
}

.row-content-1:nth-child(2) {
    background: url(images/Picture-046410251500.jpg);
}

.row-content-1:nth-child(3) {
    background: url(images/פזקר_-291_354410564000.jpg);
}

.row-content-2 {
    border: 2px solid rgb(235, 235, 235);
    width: 292px;
    height: 216px;
    margin-left: 5.5px;
    margin-right: 5.5px;
    margin-top: 18px;
    border-top-right-radius: 20px;
    background: rgb(236, 236, 236);
    background: linear-gradient(0deg, rgba(236, 236, 236, 1) 33%, rgba(254, 254, 254, 1) 79%);
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    color: rgb(87, 87, 87, 1);
    font-size: 13px;
}

.more-details, .area {
    background: url(images/read_more_yellow.png) no-repeat left center;
}

.row-content-2>h3 {
    height: 33px;
    right: 4px;
    line-height: 34px;
    font-weight: bold;
    margin-bottom: 15px;
    font-size: 14px;
    width: 244px;
    height: 33px;
    margin-right: 24px;
    padding: 0;
    border-bottom: 2px solid rgb(235, 235, 235);;
}

.row-content-2>img {
    width: 250px;
    height: 110px;
    margin-right: 24px;
}

.more-details {
    margin-top: 15px;
    margin-left: 15px;
    width: 87.5px;
    height: 15px;
    align-self: flex-end;
}

.more-details>a {
    width: 87.5px;
    height: 15px;
    display: inline-block;
}

.more-details>a, .area>a {
    color: rgb(114, 113, 109);
}

.more-details>a:hover, .area>a:hover {
    color: rgb(0, 96, 155);
}

.more-details:hover, .area>a:hover {
    background: url(images/read_more_blue.png) no-repeat left center;
}

.distribution {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    width: 244px;
    height: 168px;
    margin-right: 15px;
    margin-bottom: 10px;
}
.distribution>img[src^="images/Untitled-3058756287.jpg"]{
    display: inline-block;
    height: 165px;
}
.areas {
    width: 54px;
    height: 70px;
    display: inline-block;
}

.area {
    width: 37.5px;
    height: 13px;
    margin: 7px;
    display: block;
}

.area>a {
    width: 37.5px;
    height: 13px;
    display: block;
}




footer {
    border: 1px solid black;
    position: fixed;
    width: 100%;
    height: 38px;
    bottom: 0;
    background-color: rgb(144, 144, 144);
    background: linear-gradient(0deg, rgba(144, 144, 144, 1) 69%, rgba(203, 203, 203, 1) 97%);
}

.footer-nav {
   
    height: 30px;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    list-style: none;
    padding: 0;

}

.footer-nav>li.sep-1 {
  margin-left: 5px;
  margin-right: 5px;
    color: #fff;
    font-size: 14px;

}

.footer-nav>li>a.pazomat{
    color: red;
}

.footer-nav>li>a{
    text-decoration: none;
    color: #fff;
    font-size: 14px;

}
.footer-nav>li>a.fb{
    width: 18px;
    height: 18px;
    display: block;
  
    background-image: url(images/fb_icon.png) ;
}


.footer-nav>li>a:hover,.header-top>a:hover {
    color: rgb(0, 96, 155);
    text-decoration: underline;
}

.row {
    border: 1px solid green;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    height:426px ;
    
}
.col{
    border: 1px solid red;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    
    
   
}
.col:nth-child(1){
  flex-basis: 122px;
    
    
   
}

.col:nth-child(2){
    flex-basis: 440px;
    height: 426px;
      
      
     
  }

  .col:nth-child(3){
    flex-basis: 292px;
    height: 426px;
      
     
  }
  


main.contact-page{
    margin: auto;
    border: 1px solid black;
    width: 900px;
    height: 458px;
    padding-top: 32px;
    
}

.content{
    border: 1px solid black;
}

